Origin to Geometry uses bounding box while set to Median Center #52354

Closed
opened 2017-08-11 16:24:21 +02:00 by ChameleonScales · 6 comments

System Information
Manjaro Linux x64
GeForce GT 640

Blender Version
Broken: 2.78c, 2.79RC1, 2.75a

Description
When the Pivot Point is set to anything else than Median Point, the Origin to Geometry operator uses the bounding box even though it's set to Median Center by default. We have to switch to Bounds Center and back to Median Center to solve that (or have the Pivot Point set to Median at the first place).

Exact steps for others to reproduce the error
Open this file : Origin to Geometry bug.blend

  • do an Object > Transform > Origin to Geometry : the origin is at the center of the bounding box
  • in the Tool Shelf or F6 menu, set center to Bounds Center
  • switch back to Median Center
  • the origin is now positioned at the median center.

This doesn't happen when the pivot point is set to Median Point but happens in any other Pivot Point setting.

**System Information** Manjaro Linux x64 GeForce GT 640 **Blender Version** Broken: 2.78c, 2.79RC1, 2.75a **Description** When the Pivot Point is set to anything else than Median Point, the Origin to Geometry operator uses the bounding box even though it's set to Median Center by default. We have to switch to Bounds Center and back to Median Center to solve that (or have the Pivot Point set to Median at the first place). **Exact steps for others to reproduce the error** Open this file : [Origin to Geometry bug.blend](https://archive.blender.org/developer/F707299/Origin_to_Geometry_bug.blend) - do an Object > Transform > Origin to Geometry : the origin is at the center of the bounding box - in the Tool Shelf or F6 menu, set center to Bounds Center - switch back to Median Center - the origin is now positioned at the median center. This doesn't happen when the pivot point is set to Median Point but happens in any other Pivot Point setting.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ChameleonScales

Added subscriber: @ChameleonScales
Campbell Barton was assigned by Aaron Carlisle 2017-08-20 06:45:14 +02:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Apparently, the initial value, if not set, is overwritten by the enum item that defines the current center of rotation and scaling of selected objects.
I don't see why.
Possible solution:

@@ -765,12 +765,10 @@ static int object_origin_set_exec(bContext *C, wmOperator *op)
 	}
 	else {
 		/* get the view settings if 'around' isn't set and the view is available */
 		View3D *v3d = CTX_wm_view3d(C);
 		copy_v3_v3(cursor, ED_view3d_cursor3d_get(scene, v3d));
-		if (v3d && !RNA_struct_property_is_set(op->ptr, "center"))
-			around = v3d->around;
 	}
 
 	zero_v3(cent);
 
 	if (obedit) {

Apparently, the initial value, if not set, is overwritten by the enum item that defines the current center of rotation and scaling of selected objects. I don't see why. Possible solution: ``` @@ -765,12 +765,10 @@ static int object_origin_set_exec(bContext *C, wmOperator *op) } else { /* get the view settings if 'around' isn't set and the view is available */ View3D *v3d = CTX_wm_view3d(C); copy_v3_v3(cursor, ED_view3d_cursor3d_get(scene, v3d)); - if (v3d && !RNA_struct_property_is_set(op->ptr, "center")) - around = v3d->around; } zero_v3(cent); if (obedit) { ```

This issue was referenced by 735653cda8

This issue was referenced by 735653cda86c88c4768bf0456afd8112044704fd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52354
No description provided.