Fix T52354: Origin to Geometry uses Bounds w/ Median Center is set